# showtime

./: .gitignore  README.md  install_wasm_for_study.sh
CLang/FirstHelloWithC/: .gitignore  hellowasm.c
CLang/SecondHelloWithC/: hellowasm.c
CLang/ThirdHelloWithC/: bkp  hellowasm.c  hellowasm.html  hellowasm.js  hellowasm.wasm
Python/BasicOfLanguage/: arit.py  control_flow.py  helloworld.py  list.py  loop.py  string.py
Python/UnusualTest/: trying_implement_rust_okerr_opt.py
Rust/ASTBenchmark/: Cargo.toml
Rust/BasisOfLanguage/: hellow.rs
Rust/BasisOfLanguage/more_about_cargo_and_crateio/: Cargo.toml
Rust/BasisOfLanguage/more_about_cargo_and_crateio/AUTO/src/: lib.rs  main.rs
Rust/BasisOfLanguage/more_about_cargo_and_crateio/MANUAL/: .gitignore
Rust/BasisOfLanguage/more_about_cargo_and_crateio/MANUAL/add_one/src/: lib.rs
Rust/BasisOfLanguage/more_about_cargo_and_crateio/MANUAL/adder/src/: main.rs
Rust/BasisOfLanguage/writing_automated_tests/: Cargo.toml
Rust/BasisOfLanguage/writing_automated_tests/src/: first.rs  lib.rs  madonna.rs  other.rs
Rust/BasisOfLanguage/writing_automated_tests/src/madonna/: mother.rs
Rust/BasisOfLanguage/writing_automated_tests/tests/: integration_test.rs
Rust/BasisOfLanguage/writing_automated_tests/tests/common/: mod.rs
Rust/bevy_game_engine/hello_bevy/: Cargo.toml
Rust/bevy_game_engine/hello_bevy/src/: lib.rs  main.rs
Rust/yewbasic/: Cargo.toml  index.html
Solidity/first_code/: ChatGPTAnswer.rs  ChatGPTAnswer.sol  ContractWithMapping.sol  Counter.sol  Exemplo.sol  Nft.sol  SolidityTypes.sol
(+98 files in other folders)
