[package]
name = "more_about_cargo_and_crateio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

description = "Cargo TEST only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Usado para definir todas as padrões de compilação para desenvolvimento
[profile.dev]
opt-level = 1

# Usado para definir todos os padrẽos que serão utilizados na versão final
# para versão que será oferecida
[profile.release]
opt-level = 2   


[dependencies]
