paths = ["/path/to/override"] 
[package]
name = "writing_automated_tests"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
# cargo test --package writing_automated_tests --test integration
# ou
# cargo test --test integration
name = "integration"
path = "tests/integration_test.rs"



[dependencies]
