[package]
name = "hello_bevy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# De acordo com a doc, para otimização dos pacotes externos a minha aplicação
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1" # --features bevy/dynamic

# [target.x86-64-unknown-linux-gnu]
# linker = "clang"
# # rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/modl"]
